<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calc"
    android:background="@color/colorWhite">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:background="@color/colorPrimary"
        android:text="@string/current_date"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/todaydatetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="30dp"
        android:text="@string/current_date"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="314dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/categories"
        android:elevation="16.5dp">

        <TextView
            android:id="@+id/foodcat"
            android:layout_width="101dp"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="49dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="164dp"
            android:layout_marginBottom="12dp"
            android:text="@string/food_cat"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:visibility="visible"
            android:onClick="FoodClicked"/>

        <TextView
            android:id="@+id/exercat"
            android:layout_width="137dp"
            android:layout_height="31dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="160dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="10dp"
            android:text="@string/exer_cate"
            android:textColor="@color/colorBack"
            android:textSize="24sp"
            android:onClick="ExerciseClicked"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="158dp"
        android:background="@drawable/selectedcate"
        android:onClick="BreakfastClicked"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:text="@string/f_breakfast"
        android:textColor="@color/colorWhite"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/lunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="169dp"
        android:layout_marginTop="157dp"
        android:background="@drawable/nonselectedcat"
        android:onClick="LunchClicked"
        android:paddingStart="12dp"
        android:paddingTop="5dp"
        android:paddingEnd="12dp"
        android:text="@string/f_lunch"
        android:textColor="@color/colorGrey"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/dinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="287dp"
        android:layout_marginTop="153dp"
        android:background="@drawable/nonselectedcat"
        android:onClick="DinnerClicked"
        android:paddingStart="12dp"
        android:paddingTop="5dp"
        android:paddingEnd="12dp"
        android:text="@string/f_dinner"
        android:textColor="@color/colorGrey"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="279dp"
        android:layout_height="37dp"
        android:layout_alignEnd="@+id/send"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="-18dp"
        android:layout_marginBottom="67dp"
        android:background="@drawable/inputfieldborder"
        android:ems="4"
        android:hint="@string/Enter"
        android:inputType="numberDecimal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="73dp"
        android:text="Enter"
        android:textColor="#5CB3FF"
        android:textSize="18sp"
        android:visibility="invisible"
        android:onClick="SaveData"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="154dp"
        android:layout_height="264dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="296dp"
        android:layout_marginBottom="106dp"
        app:srcCompat="@drawable/et" />

    <TextView
        android:id="@+id/ftlabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginBottom="260dp"
        android:text="@string/tott"
        android:textColor="@color/colorGrey"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="153dp"
        android:layout_height="275dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="286dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="98dp"
        app:srcCompat="@drawable/ft" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="122dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="313dp"
        android:text="@string/extt"
        android:textColor="@color/colorGrey"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/addbtn"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="18dp"
        android:layout_toEndOf="@+id/imageView17"
        android:onClick="AddClicked"
        app:srcCompat="@drawable/addb" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="57dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="23dp"
        app:srcCompat="@drawable/hometwo"
        android:onClick="Home"/>

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="35dp"
        android:layout_height="22dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="24dp"
        app:srcCompat="@drawable/diarytwo"
        android:onClick="OpenDiary"/>

    <TextView
        android:id="@+id/totalnjk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="173dp"
        android:text="@string/totalnjk"
        android:textColor="@color/colorBack"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="229dp"
        android:layout_marginEnd="132dp"
        android:text="@string/njk"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/foodtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="199dp"
        android:text="@string/foodtotal"
        android:textColor="@color/colorBack"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/ftunits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="205dp"
        android:layout_toEndOf="@+id/foodtotal"
        android:text="@string/kl"
        android:textColor="@color/colorBack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ftlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginBottom="315dp"
        android:text="@string/foodtt"
        android:textColor="@color/colorGrey"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/extunits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="208dp"
        android:text="@string/kj"
        android:textColor="@color/colorBack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/extotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="200dp"
        android:text="@string/exercisetotal"
        android:textColor="@color/colorBack"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="122dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="265dp"
        android:text="@string/tott"
        android:textColor="@color/colorGrey"
        android:textSize="28sp" />


</RelativeLayout>