<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DaySummary"
    android:background="@color/colorWhite">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:background="@color/colorPrimary"
        android:text="@string/current_date"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/diary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="43dp"
        android:text="@string/diaryEn"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/day1"
        android:layout_width="69dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="111dp"
        android:background="@drawable/seletecteddaytoday"
        android:paddingStart="10sp"
        android:paddingTop="35sp"
        android:text="Aug"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:onClick="DayOneClicked"/>

    <TextView
        android:id="@+id/day1day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="127dp"
        android:text="@string/Thu"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/day1date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="182dp"
        android:text="@string/zero5"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/day2"
        android:layout_width="69dp"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="111dp"
        android:background="@drawable/daytodaynav"
        android:onClick="DayTwoClicked"
        android:paddingStart="10sp"
        android:paddingTop="35sp"
        android:text="Aug"
        android:textColor="@color/colorBack"
        android:textSize="25sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/day2day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="120dp"
        android:text="@string/Day"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/day2date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="182dp"
        android:onClick="DayOneClicked"
        android:text="@string/zero5"
        android:textColor="@color/colorBack"
        android:textSize="20sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/day3"
        android:layout_width="69dp"
        android:layout_height="118dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="104dp"
        android:background="@drawable/daytodaynav"
        android:onClick="DayThreeClicked"
        android:paddingStart="10sp"
        android:paddingTop="35sp"
        android:text="@string/month"
        android:textColor="@color/colorBack"
        android:textSize="25sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/day3day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="113dp"
        android:text="@string/Day"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/day3date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="113dp"
        android:text="@string/zero5"
        android:textColor="@color/colorBack"
        android:textSize="20sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/day4"
        android:layout_width="69dp"
        android:layout_height="118dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/daytodaynav"
        android:onClick="DayFourClicked"
        android:paddingStart="10sp"
        android:paddingTop="35sp"
        android:text="@string/month"
        android:textColor="@color/colorBack"
        android:textSize="25sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/day4day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="38dp"
        android:text="@string/Day"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/day4date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="21dp"
        android:text="@string/zero5"
        android:textColor="@color/colorBack"
        android:textSize="20sp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="154dp"
        android:layout_height="264dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="322dp"
        android:layout_marginBottom="79dp"
        app:srcCompat="@drawable/et" />

    <TextView
        android:id="@+id/ftlabel3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginBottom="129dp"
        android:text="@string/tott"
        android:textColor="@color/colorGrey"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/totalnjk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="246dp"
        android:layout_marginEnd="166dp"
        android:text="@string/totalnjk"
        android:textColor="@color/colorBack"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="126dp"
        android:text="@string/nkj"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/foodtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="219dp"
        android:text="@string/foodtotal"
        android:textColor="@color/colorBack"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/ftunits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="223dp"
        android:layout_toEndOf="@+id/foodtotal"
        android:text="@string/kl"
        android:textColor="@color/colorBack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ftlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="286dp"
        android:text="@string/foodtt"
        android:textColor="@color/colorGrey"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/extunits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="227dp"
        android:text="@string/kj"
        android:textColor="@color/colorBack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/extotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="222dp"
        android:text="@string/exercisetotal"
        android:textColor="@color/colorBack"
        android:textSize="35sp" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="153dp"
        android:layout_height="275dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="309dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="75dp"
        app:srcCompat="@drawable/ft" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="122dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="133dp"
        android:text="@string/tott"
        android:textColor="@color/colorGrey"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="57dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="23dp"
        app:srcCompat="@drawable/hometwo"
        android:onClick="Home"/>

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="35dp"
        android:layout_height="22dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="24dp"
        app:srcCompat="@drawable/diarytwo"
        android:onClick="OpenDiary"/>

    <ImageView
        android:id="@+id/addbtn"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="18dp"
        android:layout_toEndOf="@+id/imageView17"
        android:onClick="AddClicked"
        app:srcCompat="@drawable/addb" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="122dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="284dp"
        android:text="@string/extt"
        android:textColor="@color/colorGrey"
        android:textSize="28sp" />


</RelativeLayout>